<resources>
    <string name="app_name">&#160;하니마니</string>

    <string name="tab_title_tasks">할일</string>
    <string name="tab_title_settings">설정</string>

    <string name="button_add_task">할일추가</string>
    <string name="button_all_completed_task">완료항목 삭제</string>

    <string name="message_default_tip_title">[도움말]</string>
    <string name="message_default_tip_content">등록 : 할일추가 버튼 클릭\n수정 : 할일 클릭\n삭제 : 할일 왼쪽으로 밀기\n완료 : 할일 좌측 체크박스 선택\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;또는 할일 오른쪽으로 밀기\n이동 : 할일 꾹 눌러서 옮기기\n종료 : 스마트폰 취소 버튼 클릭</string>

    <string name="hint_add_task">할일을 입력하세요!</string>

    <string name="header_tasks">할일 목록!</string>
    <string name="header_task_completed">완료한 일들!</string>

    <string name="empty_history_text">추가한 태스크가 없습니다.</string>
    <string name="title">제목</string>
    <string name="description">할일을 입력해주세요.</string>
    <string name="delete">삭제</string>
    <string name="modify">할일 수정</string>
    <string name="update">저장</string>
    <string name="delete_all">Delete All</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="setting_title_design">디자인</string>
    <string name="setting_title_function">기능</string>

    <string name="setting_theme">테마 변경</string>
    <string name="setting_theme_automatic">기본 테마</string>
    <string name="setting_theme_wallpaper" translatable="false">다이나믹 테마</string>
    <string name="setting_theme_light">밝은 낮</string>
    <string name="setting_theme_twilight">해질녘</string>
    <string name="setting_theme_night">깊은 밤</string>
    <string name="setting_theme_sunrise">아침 노을</string>
    <string name="setting_theme_aurora">새벽녘</string>
    <string name="setting_theme_pink">핑크 테마</string>
    <string name="setting_theme_purple">퍼플 테마</string>
    <string name="setting_theme_blue">블루 테마</string>

    <string name="setting_font_size">글자 크기</string>
    <string name="setting_font_align">글자 정렬</string>

    <string name="setting_function_autorun">자동 실행</string>
    <string name="setting_function_hide_complete_tasks">완료 목록 감추기</string>

    <string name="noti_content_title">클릭하여 앱 실행</string>
    <string name="noti_content_text">안정적인 실행을 위해 알림 표시 중</string>

    <string name="dialog_title">권한 요청</string>
    <string name="dialog_message">안정적인 실행을 위해 권한을 허용해 주세요. \n\n구글 정책으로 인해 다른앱 위에 그리기 권한이 필수로 필요합니다.</string>
    <string name="dialog_ok">확인</string>


</resources>